--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
 
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
+
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.google.firebase:firebase-appindexing:10.0.1'
@@ -49,12 +51,4 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.android.support:support-v4:25.3.1'
 }
-
-
-
-
-
-
-
-
 apply plugin: 'com.google.gms.google-services'
