--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.google.firebase:firebase-messaging:11.0.2'
     compile 'com.google.firebase:firebase-crash:11.0.2'
+    compile 'com.google.firebase:firebase-storage:11.0.2'
     compile 'com.google.firebase:firebase-core:11.0.2'
     compile 'com.facebook.android:facebook-android-sdk:4.22.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
@@ -48,5 +49,6 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-database:1.0.0'
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.android.support:support-v4:25.3.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
