--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".Anekvurna"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustPan">
         <meta-data
@@ -88,7 +89,21 @@
         <activity
             android:name=".fullImageActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".FavoriteVideosActivity" />
+        <activity android:name=".FavoriteVideosActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="http" android:host="www.youtube.com" android:mimeType="text/*" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:scheme="http"
+                    android:host="m.youtube.com"
+                    android:mimeType="text/*" />
+            </intent-filter>
+        </activity>
         <activity android:name=".AddNewSubject" />
         <activity android:name=".ForgotPasswordActivity"></activity>
     </application>
