--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ android {
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
     }
+    repositories{
+        maven {
+            url 'http://dl.bintray.com/amulyakhare/maven'
+        }
+    }
 }
 
 dependencies {
@@ -31,6 +36,9 @@ dependencies {
 
 
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+
+
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
 
     compile 'com.google.firebase:firebase-auth:11.0.2'
