--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".Anekvurna"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".Anekvurna"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustPan">
         <meta-data
@@ -82,31 +82,43 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".AnotherActivity" />
+        <activity android:name=".AnotherActivity"
+            android:label="Videos"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".YoutubeActivity" />
         <activity android:name=".Registration" />
         <activity android:name=".AddHobbyActivityt" />
         <activity
             android:name=".fullImageActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".FavoriteVideosActivity" >
+        <activity android:name=".FavoriteVideosActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:scheme="http" android:host="www.youtube.com" android:mimeType="text/*" />
+
+                <data
+                    android:host="www.youtube.com"
+                    android:mimeType="text/*"
+                    android:scheme="http" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data
-                    android:scheme="http"
                     android:host="m.youtube.com"
-                    android:mimeType="text/*" />
+                    android:mimeType="text/*"
+                    android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddNewSubject"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ForgotPasswordActivity"></activity>
+        <activity
+            android:name=".AddNewSubject"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ForgotPasswordActivity" />
+        <activity android:name=".ForgotPassword"></activity>
     </application>
 
 </manifest>
