--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        dev {
+            // Enable pre-dexing to produce an APK that can be tested on
+            // Android 5.0+ without the time-consuming DEX build processes.
+            minSdkVersion 21
+        }
+    }
     packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
     }
-    repositories{
+    repositories {
         maven {
             url 'http://dl.bintray.com/amulyakhare/maven'
         }
@@ -38,9 +45,12 @@ dependencies {
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 
 
+
+
+
+
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-
-
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.google.firebase:firebase-messaging:11.0.2'
     compile 'com.google.firebase:firebase-crash:11.0.2'
@@ -55,6 +65,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.google.firebase:firebase-invites:11.0.2'
     compile 'com.google.android.gms:play-services-auth:11.0.2'
+    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compile 'com.google.android.gms:play-services-plus:11.0.2'
     compile 'com.firebaseui:firebase-ui-database:1.0.0'
     compile 'com.github.bumptech.glide:glide:4.0.0'
