--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
         exclude 'META-INF/NOTICE'
     }
     repositories {
+        mavenCentral()
         maven {
             url 'http://dl.bintray.com/amulyakhare/maven'
         }
@@ -40,12 +41,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-
-
     compile files('libs/YouTubeAndroidPlayerApi.jar')
-
-
-
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'com.google.firebase:firebase-auth:11.0.2'
