--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.main.cognichamp.CogniChamp">
+    package="com.main.cognichamp.CogniChamp"
+    android:versionCode="1"
+    android:versionName="1.0">
+
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <application
-        android:name="com.main.cognichamp.CogniChamp.Anekvurna"
+        android:name="com.main.cognichamp.CogniChamp.CogniChamp"
         android:allowBackup="true"
         android:icon="@mipmap/cognichamplogo"
         android:label="@string/app_name"
