--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "com.example.anshuman_hp.internship"
+        applicationId "com.main.cognichamp.CogniChamp"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -13,12 +13,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         resConfigs "auto"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+
     productFlavors {
         dev {
             // Enable pre-dexing to produce an APK that can be tested on
@@ -61,7 +56,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.google.firebase:firebase-invites:11.0.2'
     compile 'com.google.android.gms:play-services-auth:11.0.2'
-    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'com.android.volley:volley:1.0.0'
+//    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compile 'com.google.android.gms:play-services-plus:11.0.2'
     compile 'com.firebaseui:firebase-ui-database:1.0.0'
     compile 'com.github.bumptech.glide:glide:4.0.0'
